# EdisonHAL

./: CMakeLists.txt  EdisonHal.h  EdisonHalLogging.cpp  motorController.cpp  motorController.h
Documentation/: EdisonHALDocumentation.tex  build.bash  build.bat  documentation.tex  doxygenConfig  shortDocumentation.tex
EdisonHeaders/: hardwareHeader.h
FalseHeaders/: hardwareHeader.h
HardwareTest/: CMakeLists.txt  hardwareEntry.cpp  helloWorldMraa.cpp  helloWorldMraa.h  motorController.cpp  motorController.h
test/: CMakeLists.txt  EdisonHalTest.cpp  EdisonHalTest.h
