IF(NOT EDISONHAL_TEST_CMAKE)
SET(EDISONHAL_TEST_CMAKE 1)

MESSAGE(STATUS )
MESSAGE(STATUS --------- Tests ---------)
MESSAGE(STATUS )

SET(CUR_SRC ${GLOBAL_DIR}/EdisonHal/test)
INCLUDE_DIRECTORIES(${CUR_SRC})

SET( SRC_H
	${CUR_SRC}/EdisonHalTest.h
)

SET( SRC_CPP
)

ADD_LIBRARY( EdisonHalTest STATIC
	${SRC_CPP}
	${SRC_H}
)
TARGET_LINK_LIBRARIES( EdisonHalTest
	${OS_LIBS}
	${EXE_LIBS}
)
SET(TEST_LIBS ${TEST_LIBS} EdisonHalTest)

ENDIF(NOT EDISONHAL_TEST_CMAKE)